# thermal_photometric_calibration

./: CMakeLists.txt  README.md  demo.cpp  demo_loop.cpp  irPhotoCalib.cpp  main.cpp  utils.h
include/: gaussian_process_regression.h  gaussian_process_regression.hxx  irPhotoCalib.h
support_scripts/: CreateDataset.ipynb
